--- a/arch/x86/configs/chromiumos-borealis-vm-x86_64_defconfig
+++ b/arch/x86/configs/chromiumos-borealis-vm-x86_64_defconfig
@@ -51,6 +51,7 @@ CONFIG_X86_CPUID=y
 # CONFIG_MTRR_SANITIZER is not set
 # CONFIG_X86_INTEL_MEMORY_PROTECTION_KEYS is not set
 CONFIG_RANDOMIZE_MEMORY_PHYSICAL_PADDING=0x1
+# CONFIG_CPU_SRSO is not set
 CONFIG_PM_DEBUG=y
 CONFIG_PM_ADVANCED_DEBUG=y
 # CONFIG_ACPI_BATTERY is not set
