CHROMIUM: config: termina: Disable SRSO mitigations.
The mitigations for the "spec_rstack_overflow" CPU vulnerability have
a big I/O performance cost and the effectiveness of the default
mitigation, safe-ret, is still unknown.
(Host) performance benchmarks here: go/cros-srso-perf

BUG=b:297466181
TEST=Verified that the config is disabled when building termina kernel.

Change-Id: I981ed699872f5e19a2f315abf99c510e6c105d61
Signed-off-by: Suleiman Souhlal <suleiman@google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4813581
Auto-Submit: Suleiman Souhlal <suleiman@chromium.org>
Reviewed-by: Dmitry Torokhov <dtor@chromium.org>
Commit-Queue: Suleiman Souhlal <suleiman@chromium.org>
Tested-by: Suleiman Souhlal <suleiman@chromium.org>
Commit-Queue: Dmitry Torokhov <dtor@chromium.org>

--- a/chromeos/config/termina/x86_64/common.config
+++ b/chromeos/config/termina/x86_64/common.config
@@ -7,6 +7,7 @@
 # CONFIG_ACPI_THERMAL is not set
 CONFIG_ARCH_MMAP_RND_BITS=31
 CONFIG_BLK_DEV_INTEGRITY=y
+# CONFIG_CPU_SRSO is not set
 CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_CRYPTO_CRC32C_INTEL=y
 CONFIG_CRYPTO_LRW=y
