CHROMIUM: config: reven: Disable SRSO mitigations.
The mitigations for the "spec_rstack_overflow" CPU vulnerability have
a big I/O performance cost and the effectiveness of the default
mitigation, safe-ret, is still unknown.
(Host) performance benchmarks here: go/cros-srso-perf

BUG=b:297466181
TEST=Verified that the config is disabled when building reven kernel.

Change-Id: Id4778cf711df04e40ea65699eedaeda874368a73
Signed-off-by: Suleiman Souhlal <suleiman@google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4825223
Tested-by: Suleiman Souhlal <suleiman@chromium.org>
Reviewed-by: Justin Ouellette <justinoue@google.com>
Commit-Queue: Suleiman Souhlal <suleiman@chromium.org>
Reviewed-by: Nicholas Bishop <nicholasbishop@google.com>

--- a/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
@@ -39,6 +39,7 @@ CONFIG_BROADCOM_PHY=m
 CONFIG_BT_HCIBTUSB_MTK=y
 CONFIG_COMPAL_LAPTOP=m
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+# CONFIG_CPU_SRSO is not set
 CONFIG_CRYPTO_DEV_VIRTIO=m
 CONFIG_DEBUG_GPIO=y
 CONFIG_DMADEVICES=y
